src/objects/Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Indicator_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indicator Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Indicators</relationshipLabel>
        <relationshipName>Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Height</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Width</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <label>RecordType Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Inches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ounces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square Inches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basis Points</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Values_Currency__c</fullName>
        <label>Value (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Values_Number__c</fullName>
        <label>Value (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Values_Percent__c</fullName>
        <label>Values (Percentage)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Values_Picklist__c</fullName>
        <label>Values (Picklist)</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Indicator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Indicator_Owner__c</columns>
        <columns>Values_Number__c</columns>
        <columns>Values_Currency__c</columns>
        <columns>Values_Percent__c</columns>
        <columns>Values_Picklist__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Indicators Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indicators</pluralLabel>
    <recordTypes>
        <fullName>KPI_Currency</fullName>
        <active>true</active>
        <label>KPI - Currency</label>
    </recordTypes>
    <recordTypes>
        <fullName>KPI_Number</fullName>
        <active>true</active>
        <label>KPI - Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>KPI_Percent</fullName>
        <active>true</active>
        <label>KPI - Percent</label>
    </recordTypes>
    <recordTypes>
        <fullName>KPI_Picklist</fullName>
        <active>true</active>
        <label>KPI - Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>KRI_Currency</fullName>
        <active>true</active>
        <label>KRI - Currency</label>
    </recordTypes>
    <recordTypes>
        <fullName>KRI_Number</fullName>
        <active>true</active>
        <label>KRI - Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>KRI_Percent</fullName>
        <active>true</active>
        <label>KRI - Percent</label>
    </recordTypes>
    <recordTypes>
        <fullName>KRI_Picklist</fullName>
        <active>true</active>
        <label>KRI - Picklist</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>